Haiku/bridge/libmojobe/mojobe.h

/*!	`BRect` as C passes it: laid out the same, but without the
	user-declared copy constructor that makes C++ pass a `BRect` by
	hidden reference. */
struct mojobe_BRect {
	float	left;
	float	top;
	float	right;
	float	bottom;
};
/*!	`BPoint` as C passes it: laid out the same, but without the
	user-declared copy constructor that makes C++ pass a `BPoint` by
	hidden reference. */
struct mojobe_BPoint {
	float	x;
	float	y;
};
// void BPoint::Set(float x, float y)
void mojobe_BPoint_Set(mojobe_BPoint* self, float a_x, float a_y);
// void BPoint::ConstrainTo(BRect rect)
void mojobe_BPoint_ConstrainTo(mojobe_BPoint* self, mojobe_BRect a_rect);
// void BPoint::PrintToStream() const
void mojobe_BPoint_PrintToStream(mojobe_BPoint self);
// BPoint BPoint::operator-() const
mojobe_BPoint mojobe_BPoint_neg__void(mojobe_BPoint self);
// BPoint BPoint::operator-(const BPoint& other) const
mojobe_BPoint mojobe_BPoint_sub__BPoint(mojobe_BPoint self,
	mojobe_BPoint a_other);
// BPoint BPoint::operator+(const BPoint& other) const
mojobe_BPoint mojobe_BPoint_add(mojobe_BPoint self, mojobe_BPoint a_other);