Haiku/bridge/haiku/_values.mojo


    def Set(mut self, x: Float32, y: Float32):
        """`void BPoint::Set(float x, float y)`."""
        external_call["mojobe_BPoint_Set", NoneType](_address_of(self), x, y)

    def ConstrainTo(mut self, rect: BRect):
        """`void BPoint::ConstrainTo(BRect rect)`."""
        external_call["mojobe_BPoint_ConstrainTo", NoneType](
            _address_of(self),
            rect,
        )

    def PrintToStream(self):
        """`void BPoint::PrintToStream() const`."""
        external_call["mojobe_BPoint_PrintToStream", NoneType](self)

    def __neg__(self) -> BPoint:
        """`BPoint BPoint::operator-() const`."""
        var _result = external_call["mojobe_BPoint_neg__void", BPoint](self)
        return _result

    def __sub__(self, other: BPoint) -> BPoint:
        """`BPoint BPoint::operator-(const BPoint& other) const`."""
        var _result = external_call["mojobe_BPoint_sub__BPoint", BPoint](
            self,
            other,
        )
        return _result

    def __add__(self, other: BPoint) -> BPoint:
        """`BPoint BPoint::operator+(const BPoint& other) const`."""
        var _result = external_call["mojobe_BPoint_add", BPoint](self, other)
        return _result

    def write_to(self, mut writer: Some[Writer]):
        writer.write("BPoint(", self.x, ", ", self.y, ")")


@fieldwise_init
struct rgb_color(Equatable, TrivialRegisterPassable):
    """`rgb_color`, 4 bytes."""

    var red: UInt8
    var green: UInt8
    var blue: UInt8
    var alpha: UInt8


@fieldwise_init
struct BSize(Equatable, TrivialRegisterPassable):
    """`BSize`, 8 bytes."""

    var width: Float32
    var height: Float32


@fieldwise_init
struct BAlignment(Equatable, TrivialRegisterPassable):
    """`BAlignment`, 8 bytes."""

    var horizontal: alignment
    var vertical: vertical_alignment


@fieldwise_init
struct font_height(Equatable, TrivialRegisterPassable):
    """`font_height`, 12 bytes."""

    var ascent: Float32
    var descent: Float32
    var leading: Float32


@fieldwise_init
struct clipping_rect(Equatable, TrivialRegisterPassable):
    """`clipping_rect`, 16 bytes."""

    var left: Int32
    var top: Int32
    var right: Int32
    var bottom: Int32


@fieldwise_init
struct screen_id(Equatable, TrivialRegisterPassable):
    """`screen_id`, 4 bytes."""

    var id: Int32


@fieldwise_init
struct pattern(Equatable, TrivialRegisterPassable):
    """`pattern`, 8 bytes."""

    var data: UInt64


def _check_layouts():
    """Fails the compile when a value type is not laid out as clang lays it out for Haiku."""
    comptime assert size_of[BRect]() == 16
    comptime assert align_of[BRect]() == 4
    comptime assert size_of[BPoint]() == 8
    comptime assert align_of[BPoint]() == 4
    comptime assert size_of[rgb_color]() == 4
    comptime assert align_of[rgb_color]() == 1
    comptime assert size_of[BSize]() == 8
    comptime assert align_of[BSize]() == 4
    comptime assert size_of[BAlignment]() == 8
    comptime assert align_of[BAlignment]() == 4
    comptime assert size_of[font_height]() == 12
    comptime assert align_of[font_height]() == 4
    comptime assert size_of[clipping_rect]() == 16
    comptime assert align_of[clipping_rect]() == 4
    comptime assert size_of[screen_id]() == 4
    comptime assert align_of[screen_id]() == 4
    comptime assert size_of[pattern]() == 8


# ===----------------------------------------------------------------------=== #
# Hand-written (Haiku/generator/snippets/_values.mojo): helpers, and the
# constants of value types, which are `extern const` objects in the headers
# and so have no value clang can give the generator.
# ===----------------------------------------------------------------------=== #


def rgb(red: UInt8, green: UInt8, blue: UInt8, alpha: UInt8 = 255) -> rgb_color:
    """An `rgb_color`, opaque unless told otherwise."""
    return rgb_color(red, green, blue, alpha)


comptime B_ORIGIN = BPoint(0, 0)
"""`B_ORIGIN`: the point (0, 0)."""

comptime B_SOLID_HIGH = pattern(0xFFFFFFFFFFFFFFFF)
"""`B_SOLID_HIGH`: every pixel in the high colour."""

comptime B_SOLID_LOW = pattern(0)
"""`B_SOLID_LOW`: every pixel in the low colour."""

comptime B_MIXED_COLORS = pattern(0x55AA55AA55AA55AA)
"""`B_MIXED_COLORS`: a checkerboard of the high and low colours."""

comptime B_MAIN_SCREEN_ID = screen_id(0)
"""`B_MAIN_SCREEN_ID`: the main screen."""
